--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.example.calculatorplus">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.CalculatorPlus">
+            android:theme="@style/Theme.CalculatorPlus"
+            tools:replace="android:theme">
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -25,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.camera.CameraActivity"
+                  android:configChanges="screenSize|orientation"
+                  android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
     </application>
 
 </manifest>
